# ai-invention-c3cfa4-sequential-dependency-distance-anti-corr

./: README.md
dataset_iter1_ud_dep_extract/: README.md
dataset_iter1_ud_dep_extract/src/: data.py  fix_splits.py  gen_mini_preview.py  mini_data_out.json  preview_data_out.json  pyproject.toml
dataset_iter1_ud_dep_extract/src/data_out/: mini_full_data_out_1.json  mini_full_data_out_10.json  mini_full_data_out_11.json  mini_full_data_out_12.json  mini_full_data_out_13.json  mini_full_data_out_14.json  mini_full_data_out_15.json  mini_full_data_out_16.json  mini_full_data_out_2.json  mini_full_data_out_3.json  mini_full_data_out_4.json  mini_full_data_out_5.json  mini_full_data_out_6.json  mini_full_data_out_7.json  mini_full_data_out_8.json  mini_full_data_out_9.json  preview_full_data_out_10.json  preview_full_data_out_11.json  preview_full_data_out_12.json  preview_full_data_out_13.json  preview_full_data_out_14.json  preview_full_data_out_15.json  preview_full_data_out_16.json  preview_full_data_out_2.json  preview_full_data_out_3.json  preview_full_data_out_4.json  preview_full_data_out_5.json  preview_full_data_out_6.json  preview_full_data_out_7.json  preview_full_data_out_8.json  preview_full_data_out_9.json
dataset_iter1_ud_grammar_prof/: README.md
dataset_iter1_ud_typology_tab/: README.md
dataset_iter1_ud_typology_tab/src/: collect_data.py  data.py  data_out.json  full_data_out.json  mini_data_out.json  patch_modality.py  patch_modality2.py  preview_data_out.json  pyproject.toml
experiment_iter3_dd_autocorr_exp/: README.md
(+70 files in other folders)
