[project]
name = "ud-typological-classification"
version = "1.0.0"
requires-python = ">=3.11,<3.12"
description = "Typological Classification Table for UD Treebanks (WALS + Glottolog + UD Metadata)"
dependencies = [
    "datasets==4.8.4",
    "jsonschema==4.26.0",
    "loguru==0.7.3",
    "numpy==2.4.3",
    "pandas==3.0.1",
    "requests==2.33.0",
]
